	mysql_errno in the drop-in library now returns the error number from the
		DB, instead of CR_UNKNOWN_ERROR, if no error map is provided,
		and the backend database is known to be mysql
	mysql_refresh in the drop-in library works with options other than
		REFRESH_GRANT now
	mysql_shutdown/kill return 1 on failure now rather than 2000

0.66.0 - fixed mysql set isolation level query
	updated mysql connection to run commit/rollback at the end of every
		session even if only selects were run, to make sure metadata
		locks are released
	renamed sqlrclientexitstatus_t to clientsessionexitstatus_t
	updated all db connection modules to reinit the column count during
		prepare rather than execute
	fixed bug where server-side errors set by conn/cursor->setError()
		could inadverntantly be overriden during the next call to
		conn/cursor->errorMessage()
	added several more queries to mysql stmt-api blacklist
	configure option --disable-odbc-driver actually works now
	filters can specify an error string and error number now
	added support for systemd
	fixed a memory leak by applying and updating a patch from Kasyanov
		Dmitry to deallocate the error message in C++ API destructor
	legacy_stdio_definitions.lib is now included when building ODBC with
		VS2015
	added support for PHP7
	added -wait option to sqlr-start for non-Windows
	disabled -disable-new-window option to sqlr-start for non-Windows
	non-ascii character encodings work with the C# API now
	rudiments prompt class is used instead of using readline directly now
	renamed "logger-events" to just "events"
	added notification framework and "events" module
	added connection schedule framework and "cron" module
	applied sec/usec patch from samchuck at neowiz to custom_nw logger to
		fix subtle time calculation error
	applied a patch from samchuck at neowiz to the sqlrclient protocol
		module to deallocate storage for bind variables after logging
		the query to resolve a reference-after-free bug